; ModuleID = '/home/carl/AnghaBench/kilo/extr_kilo.c_getWindowSize.c'
source_filename = "/home/carl/AnghaBench/kilo/extr_kilo.c_getWindowSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.winsize = type { i32, i32 }

@TIOCGWINSZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"\1B[999C\1B[999B\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"\1B[%d;%dH\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getWindowSize(i32 %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.winsize, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca [32 x i8], align 16
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %15 = load i32, i32* @TIOCGWINSZ, align 4
  %16 = call i32 @ioctl(i32 1, i32 %15, %struct.winsize* %10)
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %22, label %18

18:                                               ; preds = %4
  %19 = getelementptr inbounds %struct.winsize, %struct.winsize* %10, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %56

22:                                               ; preds = %18, %4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @getCursorPosition(i32 %23, i32 %24, i32* %11, i32* %12)
  store i32 %25, i32* %13, align 4
  %26 = load i32, i32* %13, align 4
  %27 = icmp eq i32 %26, -1
  br i1 %27, label %28, label %29

28:                                               ; preds = %22
  br label %63

29:                                               ; preds = %22
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @write(i32 %30, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 12)
  %32 = icmp ne i32 %31, 12
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  br label %63

34:                                               ; preds = %29
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %7, align 4
  %37 = load i32*, i32** %8, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @getCursorPosition(i32 %35, i32 %36, i32* %37, i32* %38)
  store i32 %39, i32* %13, align 4
  %40 = load i32, i32* %13, align 4
  %41 = icmp eq i32 %40, -1
  br i1 %41, label %42, label %43

42:                                               ; preds = %34
  br label %63

43:                                               ; preds = %34
  %44 = getelementptr inbounds [32 x i8], [32 x i8]* %14, i64 0, i64 0
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* %12, align 4
  %47 = call i32 @snprintf(i8* %44, i32 32, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %45, i32 %46)
  %48 = load i32, i32* %7, align 4
  %49 = getelementptr inbounds [32 x i8], [32 x i8]* %14, i64 0, i64 0
  %50 = getelementptr inbounds [32 x i8], [32 x i8]* %14, i64 0, i64 0
  %51 = call i32 @strlen(i8* %50)
  %52 = call i32 @write(i32 %48, i8* %49, i32 %51)
  %53 = icmp eq i32 %52, -1
  br i1 %53, label %54, label %55

54:                                               ; preds = %43
  br label %55

55:                                               ; preds = %54, %43
  store i32 0, i32* %5, align 4
  br label %64

56:                                               ; preds = %18
  %57 = getelementptr inbounds %struct.winsize, %struct.winsize* %10, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = load i32*, i32** %9, align 8
  store i32 %58, i32* %59, align 4
  %60 = getelementptr inbounds %struct.winsize, %struct.winsize* %10, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = load i32*, i32** %8, align 8
  store i32 %61, i32* %62, align 4
  store i32 0, i32* %5, align 4
  br label %64

63:                                               ; preds = %42, %33, %28
  store i32 -1, i32* %5, align 4
  br label %64

64:                                               ; preds = %63, %56, %55
  %65 = load i32, i32* %5, align 4
  ret i32 %65
}

declare dso_local i32 @ioctl(i32, i32, %struct.winsize*) #1

declare dso_local i32 @getCursorPosition(i32, i32, i32*, i32*) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
